--- a/.github/workflows/main_samam-mentalhealth.yml
+++ b/.github/workflows/main_samam-mentalhealth.yml
@@ -1,7 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-# More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
-
 name: Build and deploy Python app to Azure Web App - SAMAM-MentalHealth
 
 on:
@@ -18,7 +14,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Set up Python version
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v2  # Updated to use v2
         with:
           python-version: '3.12'
 
@@ -35,7 +31,7 @@ jobs:
         run: zip release.zip ./* -r
 
       - name: Upload artifact for deployment jobs
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4  # Updated to use v4
         with:
           name: python-app
           path: |
@@ -51,7 +47,7 @@ jobs:
 
     steps:
       - name: Download artifact from build job
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4  # Updated to use v4
         with:
           name: python-app
 
@@ -59,7 +55,7 @@ jobs:
         run: unzip release.zip
 
       - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@v2
+        uses: azure/webapps-deploy@v3  # Updated to use v3
         id: deploy-to-webapp
         with:
           app-name: 'SAMAM-MentalHealth'
