--- a/.github/workflows/main_samam-mentalhealth.yml
+++ b/.github/workflows/main_samam-mentalhealth.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Set up Python version
-        uses: actions/setup-python@v2  # Updated to use v2
+        uses: actions/setup-python@v3  # Updated to use v3
         with:
           python-version: '3.12'
 
@@ -31,7 +31,7 @@ jobs:
         run: zip release.zip ./* -r
 
       - name: Upload artifact for deployment jobs
-        uses: actions/upload-artifact@v4  # Updated to use v4
+        uses: actions/upload-artifact@v4  # No change needed
         with:
           name: python-app
           path: |
@@ -47,7 +47,7 @@ jobs:
 
     steps:
       - name: Download artifact from build job
-        uses: actions/download-artifact@v4  # Updated to use v4
+        uses: actions/download-artifact@v4  # No change needed
         with:
           name: python-app
 
@@ -55,7 +55,7 @@ jobs:
         run: unzip release.zip
 
       - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@v3  # Updated to use v3
+        uses: azure/webapps-deploy@v3  # No change needed
         id: deploy-to-webapp
         with:
           app-name: 'SAMAM-MentalHealth'
